syntax = "proto3";

package payment;

option go_package = "accommodation-booking-system/payment-service/proto";

message PaymentDetails {
  string first_name = 1;
  string last_name = 2;
  string card_number = 3;
  string card_expiry = 4; // MM/YY format
  uint64 cvv = 5;
}

message PaymentRequest {
  uint64 booking_id = 1;
  float amount = 2;
  PaymentDetails payment_details = 3;
}

message PaymentResponse {
  string payment_id = 1;
  bool success = 2;
  string message = 3;
}

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}